--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
     image: jekyll/jekyll:3.8
     command: jekyll serve --watch --drafts --future --livereload
     ports:
-      - "4000:4000"       # Serve site on http://localhost:4000
-      - "35729:35729"     # LiveReload WebSocket
+      - "4000:4000"
+      - "35729:35729"
     volumes:
-      - .:/srv/jekyll     # Mount current dir (your Jekyll site)
+      - .:/srv/jekyll
